@@ -42,7 +42,9 @@ use_yaw_ge_offset = 0
 ; recovery time before deactivation after tracker connection loss, in seconds, 0.0 = deactivated 
 connection_timeout = 3.0
 ; interval to check virtual tracker connection, in seconds , 0.0 = deactivated 
-connection_check = 1.0					
+connection_check = 1.0
+; apply motion compensation using xrLocateSpace (default method in version < 0.3.0)
+legacy_mode	= 0
 
 ; KEYS STARTING WITH cor_ ARE NOT SUITED FOR MANUAL MODIFICATION!
 ; saved cor position for native OpenXR
